updated lots of pages

--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact ant.Studio for inquiries or feedback.">
+    <meta name="description" content="Contact ant.Studio for custom orders, inquiries, or feedback">
     <title>Contact - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -19,11 +19,61 @@
     </nav>
     <header>
         <h1>Contact Us</h1>
-        <p class="header-description">We'd love to hear from you! Reach out to us for any questions or feedback.</p>
+        <p class="header-description">We're here to help with your dessert needs</p>
     </header>
     <main>
-        <p>Email: support@antstudio.com</p>
-        <p>Phone: +1 (555) 123-4567</p>
+        <article class="contact-container">
+            <section class="contact-info">
+                <h2>Contact Information</h2>
+                <div class="contact-details">
+                    <p><strong>Email:</strong> <a href="mailto:support@antstudio.com">support@antstudio.com</a></p>
+                    <p><strong>Phone:</strong> <a href="tel:+15551234567">+1 (555) 123-4567</a></p>
+                    <p><strong>Address:</strong> 123 Dessert Street, Sweet City, SC 12345</p>
+                </div>
+            </section>
+
+            <section class="business-hours">
+                <h2>Business Hours</h2>
+                <table class="hours-table">
+                    <tr>
+                        <td>Monday - Friday:</td>
+                        <td>9:00 AM - 8:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday:</td>
+                        <td>10:00 AM - 6:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday:</td>
+                        <td>Closed</td>
+                    </tr>
+                </table>
+            </section>
+
+            <section class="ordering-info">
+                <h2>Ordering Information</h2>
+                <div class="order-details">
+                    <h3>Standard Orders</h3>
+                    <p>Please place your order at least 48 hours in advance.</p>
+                    
+                    <h3>Custom Orders</h3>
+                    <p>For custom designs and special requests, please contact us at least one week in advance.</p>
+                    
+                    <h3>Delivery Service</h3>
+                    <p>We offer delivery within a 15-mile radius of our store. Delivery fees vary by distance.</p>
+                </div>
+            </section>
+
+            <section class="additional-info">
+                <h2>Additional Information</h2>
+                <ul class="info-list">
+                    <li>All prices are subject to change without notice</li>
+                    <li>Special dietary requirements can be accommodated with advance notice</li>
+                    <li>Corporate orders welcome</li>
+                    <li>Gift cards available in store</li>
+                </ul>
+            </section>
+        </article>
     </main>
     <footer>
         <p>&copy; 2024 ant.Studio. All rights reserved.</p>
