--- a/FAQ.html
+++ b/FAQ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Frequently asked questions about ant.Studio.">
+    <meta name="description" content="Find answers to common questions about ant.Studio's desserts and services">
     <title>FAQ - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -18,12 +18,50 @@
         </ul>
     </nav>
     <header>
-        <h1>FAQ</h1>
-        <p class="header-description">Find answers to commonly asked questions about ant.Studio.</p>
+        <h1>Frequently Asked Questions</h1>
+        <p class="header-description">Find answers to common questions about our desserts and services</p>
     </header>
     <main>
-        <h2>Q: What makes your desserts special?</h2>
-        <p>A: Our desserts are crafted with premium ingredients and artistic flair.</p>
+        <article class="faq-section">
+            <section class="faq-category">
+                <h2>Ordering Information</h2>
+                <dl>
+                    <dt>How can I place an order?</dt>
+                    <dd>Orders can be placed through our website or by calling us at +1 (555) 123-4567.</dd>
+
+                    <dt>What is the lead time for orders?</dt>
+                    <dd>Standard orders require 48 hours notice. Custom and large orders need 1 week advance notice.</dd>
+
+                    <dt>Do you deliver?</dt>
+                    <dd>Yes, we offer delivery within a 15-mile radius of our store. Delivery fees apply.</dd>
+                </dl>
+            </section>
+
+            <section class="faq-category">
+                <h2>Product Information</h2>
+                <dl>
+                    <dt>Are your desserts made fresh?</dt>
+                    <dd>Yes, all our desserts are made fresh daily using premium ingredients.</dd>
+
+                    <dt>Do you accommodate dietary restrictions?</dt>
+                    <dd>We offer gluten-free and dairy-free options. Please inform us of any allergies when ordering.</dd>
+
+                    <dt>How should I store my desserts?</dt>
+                    <dd>Most desserts should be refrigerated and consumed within 2-3 days for optimal freshness.</dd>
+                </dl>
+            </section>
+
+            <section class="faq-category">
+                <h2>Special Orders</h2>
+                <dl>
+                    <dt>Can I request custom designs?</dt>
+                    <dd>Yes, we welcome custom orders for special occasions. Please contact us to discuss your requirements.</dd>
+
+                    <dt>What is your cancellation policy?</dt>
+                    <dd>Orders can be cancelled with full refund up to 48 hours before pickup/delivery time.</dd>
+                </dl>
+            </section>
+        </article>
     </main>
     <footer>
         <p>&copy; 2024 ant.Studio. All rights reserved.</p>
