--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn more about ant.Studio and our passion for desserts, cuisine, and culture.">
+    <meta name="description" content="Learn about ant.Studio's history, mission, and dedication to artisanal desserts">
     <title>About - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -18,11 +18,42 @@
         </ul>
     </nav>
     <header>
-        <h1>About Us</h1>
-        <p class="header-description">Discover the story behind ant.Studio and our dedication to crafting artisanal desserts that enrich everyday life.</p>
+        <h1>About ant.Studio</h1>
+        <p class="header-description">Discover our story and passion for creating exceptional desserts</p>
     </header>
     <main>
-        <p>At ant.Studio, we are passionate about blending flavors, textures, and aesthetics to create unforgettable desserts. Our mission is to share our love for food and culture with every creation.</p>
+        <article class="about-content">
+            <section class="about-section">
+                <h2>Our Story</h2>
+                <p>Founded in 2020, ant.Studio began as a small family-owned bakery with a big dream. 
+                   Our passion for creating exceptional desserts has driven us to explore and perfect 
+                   traditional recipes while innovating new flavors and combinations.</p>
+            </section>
+
+            <section class="about-section">
+                <h2>Our Philosophy</h2>
+                <p>We believe in:</p>
+                <ul>
+                    <li>Using only the finest ingredients</li>
+                    <li>Crafting each dessert by hand</li>
+                    <li>Preserving traditional techniques</li>
+                    <li>Creating memorable experiences</li>
+                </ul>
+            </section>
+
+            <section class="about-section">
+                <h2>Our Team</h2>
+                <p>Our talented team of pastry chefs brings together years of experience and creativity. 
+                   Led by Master Chef Parker Chen, we continuously strive to elevate the art of dessert-making.</p>
+            </section>
+
+            <section class="about-section">
+                <h2>Quality Commitment</h2>
+                <p>Every dessert that leaves our kitchen meets our exacting standards for taste, 
+                   presentation, and quality. We source our ingredients from local suppliers whenever 
+                   possible and maintain strict quality control throughout our process.</p>
+            </section>
+        </article>
     </main>
     <footer>
         <p>&copy; 2024 ant.Studio. All rights reserved.</p>
