--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore our wide range of dessert categories.">
+    <meta name="description" content="Explore our wide range of artisanal desserts at ant.Studio">
     <title>Categories - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -18,16 +18,75 @@
         </ul>
     </nav>
     <header>
-        <h1>Our Categories</h1>
-        <p class="header-description">Browse our delightful range of desserts, carefully categorized for your convenience.</p>
+        <h1>Dessert Categories</h1>
+        <p class="header-description">Discover our extensive collection of handcrafted desserts</p>
     </header>
     <main>
-        <ul>
-            <li>Cakes</li>
-            <li>Pastries</li>
-            <li>Cookies</li>
-            <li>Tarts</li>
-        </ul>
+        <div class="category-container">
+            <section class="category-section">
+                <h2>Signature Cakes</h2>
+                <div class="category-content">
+                    <img src="images/chocolate_lava_cake.jpg" 
+                         alt="Decadent chocolate lava cake" 
+                         class="category-image">
+                    <ul>
+                        <li>Chocolate Lava Cake</li>
+                        <li>New York Cheesecake</li>
+                        <li>Black Forest Gateau</li>
+                        <li>Red Velvet Cake</li>
+                        <li>Carrot Cake</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="category-section">
+                <h2>European Pastries</h2>
+                <div class="category-content">
+                    <img src="images/tiramisu.jpg" 
+                         alt="Classic Italian Tiramisu" 
+                         class="category-image">
+                    <ul>
+                        <li>Tiramisu</li>
+                        <li>French Croissants</li>
+                        <li>Danish Pastries</li>
+                        <li>Viennese Strudel</li>
+                        <li>Belgian Eclairs</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="category-section">
+                <h2>Elegant Desserts</h2>
+                <div class="category-content">
+                    <img src="images/creme_brulee.jpg" 
+                         alt="Traditional Crème Brûlée" 
+                         class="category-image">
+                    <ul>
+                        <li>Crème Brûlée</li>
+                        <li>Chocolate Mousse</li>
+                        <li>Panna Cotta</li>
+                        <li>Fruit Tarts</li>
+                        <li>Soufflés</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="category-section">
+                <h2>Seasonal Specials</h2>
+                <div class="category-content">
+                    <img src="images/apple_pie.jpg" 
+                         alt="Homemade Apple Pie" 
+                         class="category-image">
+                    <ul>
+                        <li>Apple Pie (Fall)</li>
+                        <li>Berry Pavlova (Summer)</li>
+                        <li>Pumpkin Spice Cake (Autumn)</li>
+                        <li>Christmas Pudding (Winter)</li>
+                        <li>Easter Bread (Spring)</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 ant.Studio. All rights reserved.</p>
