--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ant_studio - Artisanal Desserts</title>
-    <link rel="stylesheet" href="ant_studio_styles.css"> <!-- Added link to the new CSS file -->
+    <meta name="description" content="ant.Studio - Artisanal desserts and pastries made with passion">
+    <title>ant.Studio - Artisanal Desserts</title>
+    <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
 
 <body>
@@ -14,67 +15,53 @@
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html">Categories</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
     </nav>
     <header>
-        <h1>_ant.Studio</h1>
-        <p class="header-description">Antman Studio embraces the brand's essence of freely sharing desserts, 
-            cuisine, aesthetics, and culture, distilling beauty to enrich daily life. The concept store serves as 
-            a more complete starting point, allowing more possibilities to unfold in this space.
-            Discover our artisanal desserts, where every creation is a masterpiece of flavor
-            and craftsmanship.</p>
+        <h1>ant.Studio</h1>
+        <p class="header-description">
+            Antman Studio embraces the essence of freely sharing desserts, 
+            cuisine, aesthetics, and culture, distilling beauty to enrich daily life.
+            Our concept store serves as a complete starting point for culinary exploration.
+        </p>
     </header>
     <main>
         <div class="dessert-grid">
-            <div class="dessert-card">
-                <img src="images/chocolate_lava_cake.jpg" alt="Chocolate Lava Cake" width="300" height="300">
+            <article class="dessert-card">
+                <img src="images/chocolate_lava_cake.jpg" 
+                     alt="Warm chocolate lava cake with molten center" 
+                     class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Chocolate Lava Cake</h2>
                     <p class="dessert-description">Decadent chocolate cake with a gooey molten center</p>
                 </div>
-            </div>
-            <div class="dessert-card">
-                <img src="images/strawberry_cheescake.jpg" alt="Strawberry Cheesecake" width="300" height="300">
+            </article>
+
+            <article class="dessert-card">
+                <img src="images/strawberry_cheescake.jpg" 
+                     alt="Fresh strawberry cheesecake with berry topping" 
+                     class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Strawberry Cheesecake</h2>
                     <p class="dessert-description">Creamy cheesecake topped with fresh strawberries</p>
                 </div>
-            </div>
-            <div class="dessert-card">
-                <img src="images/Tiramisu.jpg" alt="Tiramisu" width="300" height="300">
+            </article>
+
+            <article class="dessert-card">
+                <img src="images/tiramisu.jpg" 
+                     alt="Traditional Italian tiramisu with cocoa dusting" 
+                     class="dessert-image">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Tiramisu</h2>
-                    <p class="dessert-description">Classic Italian dessert with layers of coffee-soaked ladyfingers</p>
+                    <p class="dessert-description">Classic Italian dessert with coffee-soaked ladyfingers</p>
                 </div>
-            </div>
-            <div class="dessert-card">
-                <img src="images/Apple_Pie.jpg" alt="Apple Pie" width="300" height="300">
-                <div class="dessert-info">
-                    <h2 class="dessert-name">Apple Pie</h2>
-                    <p class="dessert-description">Traditional American pie with a flaky crust and spiced apple filling
-                    </p>
-                </div>
-            </div>
-            <div class="dessert-card">
-                <img src="images/Creme_Brulee.jpg" alt="Crème Brûlée" width="300" height="300">
-                <div class="dessert-info">
-                    <h2 class="dessert-name">Crème Brûlée</h2>
-                    <p class="dessert-description">Silky custard with a crisp caramelized sugar topping</p>
-                </div>
-            </div>
-            <div class="dessert-card">
-                <img src="images/Macarons.jpg" alt="Macarons" width="300" height="300">
-                <div class="dessert-info">
-                    <h2 class="dessert-name">Macarons</h2>
-                    <p class="dessert-description">Delicate French almond meringue cookies with various fillings</p>
-                </div>
-            </div>
+            </article>
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 _ant.Studio. Parker Chen Desgin. All rights reserved.</p>
+        <p>&copy; 2024 ant.Studio. All rights reserved.</p>
     </footer>
 </body>
 
