--- a/categories.html
+++ b/categories.html
@@ -42,7 +42,7 @@
             <section class="category-section">
                 <h2>European Pastries</h2>
                 <div class="category-content">
-                    <img src="images/tiramisu.jpg" 
+                    <img src="images/Tiramisu.jpg" 
                          alt="Classic Italian Tiramisu" 
                          class="category-image">
                     <ul>
@@ -58,7 +58,7 @@
             <section class="category-section">
                 <h2>Elegant Desserts</h2>
                 <div class="category-content">
-                    <img src="images/creme_brulee.jpg" 
+                    <img src="images/Creme_brulee.jpg" 
                          alt="Traditional Crème Brûlée" 
                          class="category-image">
                     <ul>
