fixed some tepo

--- a/categories.html
+++ b/categories.html
@@ -74,7 +74,7 @@
             <section class="category-section">
                 <h2>Seasonal Specials</h2>
                 <div class="category-content">
-                    <img src="images/apple_pie.jpg" 
+                    <img src="images/Apple_pie.jpg" 
                          alt="Homemade Apple Pie" 
                          class="category-image">
                     <ul>
