--- a/categories.html
+++ b/categories.html
@@ -58,7 +58,7 @@
             <section class="category-section">
                 <h2>Elegant Desserts</h2>
                 <div class="category-content">
-                    <img src="images/Creme_brulee.jpg" 
+                    <img src="images/Creme_Brulee.jpg" 
                          alt="Traditional Crème Brûlée" 
                          class="category-image">
                     <ul>
@@ -74,7 +74,7 @@
             <section class="category-section">
                 <h2>Seasonal Specials</h2>
                 <div class="category-content">
-                    <img src="images/Apple_pie.jpg" 
+                    <img src="images/Apple_Pie.jpg" 
                          alt="Homemade Apple Pie" 
                          class="category-image">
                     <ul>
