--- a/FAQ.html
+++ b/FAQ.html
@@ -13,8 +13,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html">Categories</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="faq.html" class="current">FAQ</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="FAQ.html" class="current">FAQ</a></li>
         </ul>
     </nav>
     <header>
