--- a/categories.html
+++ b/categories.html
@@ -14,7 +14,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html" class="current">Categories</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
     <header>
