--- a/categories.html
+++ b/categories.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html" class="current">Categories</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="Contact.html">Contact</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </nav>
