--- a/about.html
+++ b/about.html
@@ -23,15 +23,16 @@
     </header>
     <main>
         <article class="about-content">
+            <h2>About Our Story</h2>
             <section class="about-section">
-                <h2>Our Story</h2>
+                <h3>Our Story</h3>
                 <p>Founded in 2020, ant.Studio began as a small family-owned bakery with a big dream. 
                    Our passion for creating exceptional desserts has driven us to explore and perfect 
                    traditional recipes while innovating new flavors and combinations.</p>
             </section>
 
             <section class="about-section">
-                <h2>Our Philosophy</h2>
+                <h3>Our Philosophy</h3>
                 <p>We believe in:</p>
                 <ul>
                     <li>Using only the finest ingredients</li>
@@ -42,13 +43,13 @@
             </section>
 
             <section class="about-section">
-                <h2>Our Team</h2>
+                <h3>Our Team</h3>
                 <p>Our talented team of pastry chefs brings together years of experience and creativity. 
                    Led by Master Chef Parker Chen, we continuously strive to elevate the art of dessert-making.</p>
             </section>
 
             <section class="about-section">
-                <h2>Quality Commitment</h2>
+                <h3>Quality Commitment</h3>
                 <p>Every dessert that leaves our kitchen meets our exacting standards for taste, 
                    presentation, and quality. We source our ingredients from local suppliers whenever 
                    possible and maintain strict quality control throughout our process.</p>
