--- a/FAQ.html
+++ b/FAQ.html
@@ -23,8 +23,10 @@
     </header>
     <main>
         <article class="faq-section">
+            <h2>Common Questions About Our Services</h2>
+            
             <section class="faq-category">
-                <h2>Ordering Information</h2>
+                <h3>Ordering Information</h3>
                 <dl>
                     <dt>How can I place an order?</dt>
                     <dd>Orders can be placed through our website or by calling us at +1 (555) 123-4567.</dd>
@@ -38,7 +40,7 @@
             </section>
 
             <section class="faq-category">
-                <h2>Product Information</h2>
+                <h3>Product Information</h3>
                 <dl>
                     <dt>Are your desserts made fresh?</dt>
                     <dd>Yes, all our desserts are made fresh daily using premium ingredients.</dd>
@@ -52,7 +54,7 @@
             </section>
 
             <section class="faq-category">
-                <h2>Special Orders</h2>
+                <h3>Special Orders</h3>
                 <dl>
                     <dt>Can I request custom designs?</dt>
                     <dd>Yes, we welcome custom orders for special occasions. Please contact us to discuss your requirements.</dd>
