--- a/Contact.html
+++ b/Contact.html
@@ -25,32 +25,42 @@
         <article class="contact-container">
             <h2>Get in Touch with ant.Studio</h2>
             
-            <section class="contact-info">
-                <h3>Contact Information</h3>
-                <div class="contact-details">
-                    <p><strong>Email:</strong> <a href="mailto:support@antstudio.com">support@antstudio.com</a></p>
-                    <p><strong>Phone:</strong> <a href="tel:+15551234567">+1 (555) 123-4567</a></p>
-                    <p><strong>Address:</strong> 123 Dessert Street, Sweet City, SC 12345</p>
-                </div>
-            </section>
+            <div class="contact-wrapper">
+                <div class="contact-left">
+                    <section class="contact-info">
+                        <h3>Contact Information</h3>
+                        <div class="contact-details">
+                            <p><strong>Email:</strong> <a href="mailto:support@antstudio.com">support@antstudio.com</a></p>
+                            <p><strong>Phone:</strong> <a href="tel:+15551234567">+1 (555) 123-4567</a></p>
+                            <p><strong>Address:</strong> 123 Dessert Street, Sweet City, SC 12345</p>
+                        </div>
+                    </section>
 
-            <section class="business-hours">
-                <h3>Business Hours</h3>
-                <table class="hours-table">
-                    <tr>
-                        <td>Monday - Friday:</td>
-                        <td>9:00 AM - 8:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Saturday:</td>
-                        <td>10:00 AM - 6:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Sunday:</td>
-                        <td>Closed</td>
-                    </tr>
-                </table>
-            </section>
+                    <section class="business-hours">
+                        <h3>Business Hours</h3>
+                        <table class="hours-table">
+                            <tr>
+                                <td>Monday - Friday:</td>
+                                <td>9:00 AM - 8:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Saturday:</td>
+                                <td>10:00 AM - 6:00 PM</td>
+                            </tr>
+                            <tr>
+                                <td>Sunday:</td>
+                                <td>Closed</td>
+                            </tr>
+                        </table>
+                    </section>
+                </div>
+
+                <div class="contact-image">
+                    <img src="images/icon.png" 
+                         alt="Fresh baked cinnamon rolls with our signature logo" 
+                         class="brand-image">
+                </div>
+            </div>
 
             <section class="ordering-info">
                 <h3>Ordering Information</h3>
