rename the file

--- a/categories.html
+++ b/categories.html
@@ -13,8 +13,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html" class="current">Categories</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
     </nav>
     <header>
@@ -42,7 +42,7 @@
             <section class="category-section">
                 <h2>European Pastries</h2>
                 <div class="category-content">
-                    <img src="images/Tiramisu.jpg" 
+                    <img src="images/tiramisu.jpg" 
                          alt="Classic Italian Tiramisu" 
                          class="category-image">
                     <ul>
@@ -58,7 +58,7 @@
             <section class="category-section">
                 <h2>Elegant Desserts</h2>
                 <div class="category-content">
-                    <img src="images/Creme_Brulee.jpg" 
+                    <img src="images/creme_brulee.jpg" 
                          alt="Traditional Crème Brûlée" 
                          class="category-image">
                     <ul>
@@ -74,7 +74,7 @@
             <section class="category-section">
                 <h2>Seasonal Specials</h2>
                 <div class="category-content">
-                    <img src="images/Apple_Pie.jpg" 
+                    <img src="images/apple_pie.jpg" 
                          alt="Homemade Apple Pie" 
                          class="category-image">
                     <ul>
