--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html">Categories</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
     </nav>
+
+    <!-- Header Section -->
     <header>
         <h1>ant.Studio</h1>
         <p class="header-description">
@@ -27,6 +30,8 @@
             Our concept store serves as a complete starting point for culinary exploration.
         </p>
     </header>
+
+    <!-- Main Content -->
     <main>
         <div class="dessert-grid">
             <article class="dessert-card">
@@ -40,7 +45,7 @@
             </article>
 
             <article class="dessert-card">
-                <img src="images/strawberry_cheesecake.jpg" 
+                <img src="images/strawberry_cheescake.jpg" 
                      alt="Fresh strawberry cheesecake with berry topping" 
                      class="dessert-image">
                 <div class="dessert-info">
@@ -50,7 +55,7 @@
             </article>
 
             <article class="dessert-card">
-                <img src="images/Tiramisu.jpg" 
+                <img src="images/tiramisu.jpg" 
                      alt="Traditional Italian tiramisu with cocoa dusting" 
                      class="dessert-image">
                 <div class="dessert-info">
@@ -60,6 +65,8 @@
             </article>
         </div>
     </main>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 ant.Studio. All rights reserved.</p>
     </footer>
