--- a/Contact.html
+++ b/Contact.html
@@ -13,8 +13,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="categories.html">Categories</a></li>
-            <li><a href="Contact.html" class="current">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
+            <li><a href="contact.html" class="current">Contact</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
     </nav>
     <header>
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="contact-image">
-                    <img src="images/icon.png" 
+                    <img src="images/cinnamon_rolls.jpg" 
                          alt="Fresh baked cinnamon rolls with our signature logo" 
                          class="brand-image">
                 </div>
