rename the file as well

--- a/Contact.html
+++ b/Contact.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="contact-image">
-                    <img src="images/cinnamon_rolls.jpg" 
+                    <img src="images/cinnamon_rolls.png" 
                          alt="Fresh baked cinnamon rolls with our signature logo" 
                          class="brand-image">
                 </div>
