--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </article>
 
             <article class="dessert-card">
-                <img src="images/strawberry_cheescake.jpg" 
+                <img src="images/strawberry_cheesecake.jpg" 
                      alt="Fresh strawberry cheesecake with berry topping" 
                      class="dessert-image">
                 <div class="dessert-info">
@@ -55,7 +55,7 @@
             </article>
 
             <article class="dessert-card">
-                <img src="images/tiramisu.jpg" 
+                <img src="images/Tiramisu.jpg" 
                      alt="Traditional Italian tiramisu with cocoa dusting" 
                      class="dessert-image">
                 <div class="dessert-info">
