--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <header>
-        <h1>About ant.Studio</h1>
+        <h1>About _ant.Studio</h1>
         <p class="header-description">Discover our story and passion for creating exceptional desserts</p>
     </header>
     <main>
