final fixed the width and height of each photo

--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about ant.Studio's history, mission, and dedication to artisanal desserts">
+    <meta name="description" content="Learn about ant.Studio's journey, values, and commitment to creating exceptional desserts">
+    <meta name="keywords" content="about us, dessert studio, pastry chefs, artisanal desserts">
+    <meta name="author" content="ant.Studio">
     <title>About - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
