--- a/categories.html
+++ b/categories.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore our wide range of artisanal desserts at ant.Studio">
+    <meta name="keywords" content="desserts, cakes, pastries, European pastries, seasonal desserts">
+    <meta name="author" content="ant.Studio">
     <title>Categories - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -28,7 +30,8 @@
                 <div class="category-content">
                     <img src="images/chocolate_lava_cake.jpg" 
                          alt="Decadent chocolate lava cake" 
-                         class="category-image">
+                         class="category-image"
+                         width="300" height="200">
                     <ul>
                         <li>Chocolate Lava Cake</li>
                         <li>New York Cheesecake</li>
@@ -44,7 +47,8 @@
                 <div class="category-content">
                     <img src="images/Tiramisu.jpg" 
                          alt="Classic Italian Tiramisu" 
-                         class="category-image">
+                         class="category-image"
+                         width="300" height="200">
                     <ul>
                         <li>Tiramisu</li>
                         <li>French Croissants</li>
@@ -60,7 +64,8 @@
                 <div class="category-content">
                     <img src="images/Creme_Brulee.jpg" 
                          alt="Traditional Crème Brûlée" 
-                         class="category-image">
+                         class="category-image"
+                         width="300" height="200">
                     <ul>
                         <li>Crème Brûlée</li>
                         <li>Chocolate Mousse</li>
@@ -76,7 +81,8 @@
                 <div class="category-content">
                     <img src="images/Apple_Pie.jpg" 
                          alt="Homemade Apple Pie" 
-                         class="category-image">
+                         class="category-image"
+                         width="300" height="200">
                     <ul>
                         <li>Apple Pie (Fall)</li>
                         <li>Berry Pavlova (Summer)</li>
