--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <article class="dessert-card">
                 <img src="images/chocolate_lava_cake.jpg" 
                      alt="Warm chocolate lava cake with molten center" 
-                     class="dessert-image">
+                     class="dessert-image"
+                     width="300" height="200">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Chocolate Lava Cake</h2>
                     <p class="dessert-description">Decadent chocolate cake with a gooey molten center</p>
@@ -47,7 +48,8 @@
             <article class="dessert-card">
                 <img src="images/strawberry_cheesecake.jpg" 
                      alt="Fresh strawberry cheesecake with berry topping" 
-                     class="dessert-image">
+                     class="dessert-image"
+                     width="300" height="200">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Strawberry Cheesecake</h2>
                     <p class="dessert-description">Creamy cheesecake topped with fresh strawberries</p>
@@ -57,7 +59,8 @@
             <article class="dessert-card">
                 <img src="images/Tiramisu.jpg" 
                      alt="Traditional Italian tiramisu with cocoa dusting" 
-                     class="dessert-image">
+                     class="dessert-image"
+                     width="300" height="200">
                 <div class="dessert-info">
                     <h2 class="dessert-name">Tiramisu</h2>
                     <p class="dessert-description">Classic Italian dessert with coffee-soaked ladyfingers</p>
