--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact ant.Studio for custom orders, inquiries, or feedback">
+    <meta name="description" content="Contact ant.Studio for custom dessert orders, business hours, and delivery information">
+    <meta name="keywords" content="contact, order desserts, delivery, business hours">
+    <meta name="author" content="ant.Studio">
     <title>Contact - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
@@ -58,7 +60,8 @@
                 <div class="contact-image">
                     <img src="images/cinnamon_rolls.png" 
                          alt="Fresh baked cinnamon rolls with our signature logo" 
-                         class="brand-image">
+                         class="brand-image"
+                         width="400" height="300">
                 </div>
             </div>
 
