--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find answers to common questions about ant.Studio's desserts and services">
+    <meta name="description" content="Comprehensive FAQ about ant.Studio's desserts, ordering process, and services">
+    <meta name="keywords" content="FAQ, dessert questions, ordering help, delivery information">
+    <meta name="author" content="ant.Studio">
     <title>FAQ - ant.Studio</title>
     <link rel="stylesheet" href="ant_studio_styles.css">
 </head>
